# kfpc

./: .gitignore  CONTRIBUTING.md  README.md  cloudbuild.yaml  docker-compose.yaml  invoke.yaml  pyproject.toml  setup.py
.github/: release.yaml
.github/workflows/: config.yaml
containers/bigquery/: Dockerfile  requirements.txt
containers/bigquery/tasks/: __init__.py
containers/notification/: requirements.txt
containers/notification/tasks/: __init__.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/reference/: index.doctree
docs/_sources/reference/: index.rst.txt
docs/reference/: index.html
examples/: simple.py
kfpc/: __init__.py  bigquery.py  notification.py  version.py
kfpc/bigquery/: __init__.py  extract.py  extract_artifact.py  load.py  query.py
kfpc/specifications/: extract.yaml  extract_artifact.yaml  load.yaml  load_artifact.yaml  query.yaml
sphinx/: Makefile
sphinx/source/: conf.py  index.rst
tasks/: __init__.py  pipeline.py
