[tool.poetry]
name = "kfpc"
version = "0.2.3"
description = "Components for Kubeflow Pipelines and Vertex Pipelines"
authors = ["sfujiwara <shuhei.fujiwara@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
kfp = "^1.8.18"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
jupyter = "^1.0.0"
google-cloud-aiplatform = "^1.15.1"
google-cloud-bigquery = "^2.34.4"
invoke = "^1.7.1"
google-cloud-pipeline-components = "^1.0.13"
toml = "^0.10.2"
 Sphinx = "^5.0.2"
 sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
