[tool.poetry]
name = "kfpc"
version = "0.3.0.dev0"
description = "Components for Kubeflow Pipelines and Vertex Pipelines"
license = "MIT"
authors = ["sfujiwara <shuhei.fujiwara@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
kfp = ">=2.0.0b10"

[tool.poetry.dev-dependencies]
black = "22.12.0"
google-cloud-aiplatform = "1.21.0"
google-cloud-bigquery = "3.4.2"
google-cloud-pipeline-components = "2.0.0b0"
invoke = "2.0.0"
toml = "0.10.2"
Sphinx = "5.3.0"
sphinx-rtd-theme = "1.0.0"
jupyter = "1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
