[tool.poetry]
name = "kfpc"
version = "0.3.0"
description = "Components for Kubeflow Pipelines and Vertex Pipelines"
license = "MIT"
authors = ["sfujiwara <shuhei.fujiwara@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
kfp = "^2.0.0"

[tool.poetry.group.dev.dependencies]
google-cloud-aiplatform = "^1.111.0"
google-cloud-bigquery = "^3.36.0"
google-cloud-pipeline-components = "^2.20.1"
invoke = "^2.2.0"
mypy = "^1.17.1"
ruff = "^0.12.11"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
types-pyyaml = "^6.0.12.20250822"
python-lsp-ruff = "^2.2.2"
python-lsp-server = "^1.13.1"

[tool.ruff]
line-length = 128

[tool.ruff.lint]
ignore = [
    "D100",
    "D104",
]
select = ["ALL"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
